fixed eye position on safari

--- a/css/element_styles/home_about_personal_section.css
+++ b/css/element_styles/home_about_personal_section.css
@@ -102,9 +102,9 @@ CORE STYLING
     width: 100%;
     height: 100%;
     left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%) scale(1.0,1.0);
-    position: relative;
+    top: 50%;
+
+    position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -114,6 +114,7 @@ CORE STYLING
     -moz-transform: translate(-50%, -50%) scale(1.0,1.0);
     -ms-transform: translate(-50%, -50%) scale(1.0,1.0);
     -o-transform: translate(-50%, -50%) scale(1.0,1.0);
+    transform: translate(-50%, -50%) scale(1.0,1.0);
 }
 @keyframes blinking {
     0% { transform: translate(-50%, -50%) scale(1.0,1.0); -webkit-transform: translate(-50%, -50%) scale(1.0,1.0); -moz-transform: translate(-50%, -50%) scale(1.0,1.0); -ms-transform: translate(-50%, -50%) scale(1.0,1.0); -o-transform: translate(-50%, -50%) scale(1.0,1.0); }
